Added support for scheduled changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,8 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "utility": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "chrono": "cpp",
+        "ratio": "cpp"
     }
 }
