Added LED Strip groups and fixed concurrent pin changes
Also fixed memory leak with Color objects

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,8 @@
         "utility": "cpp",
         "typeinfo": "cpp",
         "chrono": "cpp",
-        "ratio": "cpp"
+        "ratio": "cpp",
+        "thread": "cpp",
+        "mutex": "cpp"
     }
 }
