--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,6 @@ board = esp32doit-devkit-v1
 framework = arduino
 
 lib_deps =
-  Adafruit PWM Servo Driver Library@>=2.3.1
+  Adafruit PWM Servo Driver Library@>=2.4.0
+
+build_unflags = -fno-rtti
