--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32doit-devkit-v1]
-platform = espressif32
+platform = espressif32@3.1.0
 board = esp32doit-devkit-v1
 framework = arduino
-
-lib_deps =
-  Adafruit PWM Servo Driver Library@>=2.4.0
-
+lib_deps = 
+	Adafruit PWM Servo Driver Library@>=2.4.0
+	z3t0/IRremote@^3.4.0
 build_unflags = -fno-rtti
+
+;board_build.partitions = huge_app.csv
