Added support for deleting ColorSequences and changing colors from remote

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,4 @@ lib_deps =
 	z3t0/IRremote@^3.4.0
 build_unflags = -fno-rtti
 
-;board_build.partitions = huge_app.csv
+board_build.partitions = huge_app.csv
